generated/checker-for-evaluation/generated/test-Misuse-da1983355ccefcfb3f8eb410fff82e250fa87e39/build_logs/9/build_error_log2.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In function ‘bool {anonymous}::isMemcpyCall(const clang::ento::CallEvent&)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:39:79: error: ‘const class clang::ento::CallEvent’ has no member named ‘getCheckerContext’
   39 |   return ExprHasName(OriginExpr, "memcpy", const_cast<CheckerContext&>(*(Call.getCheckerContext())));
      |                                                                               ^~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In function ‘void {anonymous}::reportInitOrderBug(const clang::ento::CallEvent&, clang::ento::CheckerContext&, const clang::ento::MemRegion*)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:49:27: error: ‘class clang::ento::BugReporter’ has no member named ‘getBugType’
   49 |       *C.getBugReporter().getBugType("Initialization order error", "Initialization Order"),
      |                           ^~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
